--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     <p><br>
                                     <ul><li>la surveillance généralisée n'est pas un phénomène nouveau: ce qui est nouveau, c'est qu'on en parle</li><br>
                                         <li>démocratisation des questions de vie privée (et pas seulement de la surveillance des États)</li><br>
-                                        <li>prise en compte politique (questions au gouvernement, débat au parlement européen, NetMundial...) </li><br>
+                                        <li>prise en compte politique (questions au gouvernement, débat au Parlement européen, NetMundial...) </li><br>
                                         <li>réflexions sur le chiffrement global (IETF, W3C)</li>
                                     </ul>
                                 </section>
@@ -226,7 +226,7 @@
                                     <h2>Caliopen</h2><h3>La labellisation</h3>
 				    <ul><br>
 					<li>Le label est un indice de confiance pour les utilisateurs finaux</li><br>
-					<li>Il permet, par l'émission (et la révocation) de certificats, d'intégrer d'avantage les instances dans un écosystème de confidentialité</li><br></ul>
+					<li>Il permet, par l'émission (et la révocation) de certificats, d'intégrer davantage les instances dans un écosystème de confidentialité</li><br></ul>
                                     <p>Quelques pistes :
                                     <ul>
                                         <li>Authentification à distance entre membres (<a href="http://fr.wikipedia.org/wiki/OAuth">OAUTH</a>) pour qu'un utilisateur d'un service puisse lire un document partagé par un de ses contacts sur un autre service, par exemple.</li><br>
@@ -235,7 +235,7 @@
                                 </section>
                                 <section>
                                     <h3>Aujourd'hui, nous avons besoin d'aide.</h3><br>
-                                    <p>Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de d'avantage de développeurs Web (<a href="https://angularjs.org/">Angular</a>, <a href="http://www.pylonsproject.org/projects/pyramid/about">Pyramid</a>, <a href="https://www.python.org/">Python</a>).<p><br>
+                                    <p>Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de davantage de développeurs Web (<a href="https://angularjs.org/">Angular</a>, <a href="http://www.pylonsproject.org/projects/pyramid/about">Pyramid</a>, <a href="https://www.python.org/">Python</a>).<p><br>
                                         Nous avons besoin de compétences dans le domaine de la <a href="http://fr.wikipedia.org/wiki/Cryptographie">cryptographie</a> aussi, pour valider nos choix ou pour les améliorer.</p><br>
                                     <p>Et nous avons besoin d'aide dans le suivi et la direction de projet.</p>
                                 </section>
