Nouvelle version de l'archi, dernières modifs sur les slides.
saleté de github

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
                                  <section>
+				    <a href>https://github.com/CaliOpen</a>
                                     <img src="img/caliopen_logo.png" alt=""/>
+				    <a href>http://www.caliopen.org</a>
                                 </section>
                                 <section>
                                     <p>Il y a presque un an jour pour jour, <a href="http://fr.wikipedia.org/wiki/Edward_Snowden">Edward Snowden</a> dévoilait le programme PRISM.</p><br>
@@ -234,10 +236,11 @@
                                     </ul>
                                 </section>
                                 <section>
-                                    <h3>Aujourd'hui, nous avons besoin d'aide.</h3><br>
+				    <h3>Nous avons besoin d'aide.</h3><br>
                                     <p>Pour avancer plus rapidement sur le développement de notre interface utilisateur, nous avons besoin de davantage de développeurs Web (<a href="https://angularjs.org/">Angular</a>, <a href="http://www.pylonsproject.org/projects/pyramid/about">Pyramid</a>, <a href="https://www.python.org/">Python</a>).<p><br>
                                         Nous avons besoin de compétences dans le domaine de la <a href="http://fr.wikipedia.org/wiki/Cryptographie">cryptographie</a> aussi, pour valider nos choix ou pour les améliorer.</p><br>
-                                    <p>Et nous avons besoin d'aide dans le suivi et la direction de projet.</p>
+                                    <p>Et nous avons besoin d'aide dans le suivi et la direction de projet:</p>
+				    <a href>http://www.caliopen.org</a><p>
                                 </section>
                         </div>
         </div>
